// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly render ExpensesSummary with 1 expense 1`] = `
<h4>
  Viewing 
  1
   expenses totalling 
  $2.35
</h4>
`;

exports[`should correctly render ExpensesSummary with mulitple expense 1`] = `
<h4>
  Viewing 
  3
   expenses totalling 
  $12.50
</h4>
`;
